--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.14",
+    "@types/multer": "^1.4.10",
     "bcrypt": "^5.1.1",
     "mysql2": "^3.6.2",
     "nodemailer": "^6.9.7",
